<resources>
    <string name="app_name">ShoppingList</string>

    <string name="action_clearlist">Clear list</string>
    <string name="action_hidechecked">Hide checked</string>
    <string name="action_share">Share</string>

    <string name="nav_item_home">List</string>
    <string name="nav_item_cached">Cached List (offline)</string>
    <string name="nav_item_favorites">Favorites</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_about">About</string>

    <string name="title_main">ShoppingList</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_about">About ShoppingList</string>
    <string name="title_settings">Settings</string>
    <string name="title_cached">Cached Version</string>


    <string name="error_connect">Could not connect to the server at: </string>
    <string name="error_not_found">API could not be access on the supplied host.</string>
    <string name="error_no_header">API did not send back a header with the version information. (Location/Host of api correct?)</string>
    <string name="error_server_error">The server did not send any content back. Likely due to an internal server error.</string>
    <string name="error_auth">The server refused the connection. Please check your server configuration.</string>
    <string name="error_response">The server sent a response that did not make sense!</string>
    <string name="error_url">The supplied URL for the api is not a valid URL.</string>
    <string name="error_no_host_configured">Please configure host and authkey in Settings.</string>
    <string name="error_host_not_found">Host not found. Are you connected to the internet?</string>
    <string name="error_general">An unexpected error occurred. Please post an issue on GitHub!</string>

    <string name="toast_no_favorites">You have no favorites yet. Add some!</string>

    <string name="success">Success</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="cache">See cached version</string>
    <string name="settings">Go to settings</string>
    <string name="add_custom_item">Item</string>

    <string name="empty_view_favorites">No favorites yet… Add some!</string>
    <string name="empty_view_list">Nothing on your list… for now :)</string>
    <string name="empty_view_cache">The last time the list was loaded, it was empty.</string>

    <string name="header_title" translatable="false">ShoppingList</string>
    <string name="header_detail" translatable="false">For all your hungry needs</string>
    <string name="github_url" translatable="false">https://github.com/GroundApps/ShoppingList</string>

    <string name="new_entry">New Entry</string>
    <string name="new_entry_from_favorite">Favorites</string>
    <string name="new_entry_from_qr_code">Scan QR</string>
    <string name="deleteItem">Delete</string>
    <string name="markFavorite">Favorite</string>
    <string name="error_backend_version">Required: </string>
    <string name="error_backend_version_update_notice">Please update the backend on the server!</string>

    <string name="HttpUserAgent" translatable="false">ShoLiApp</string>
    <string name="favorite_delete_notice">Long tap to delete</string>
    <string name="dialog_clear_confirm">Do you want to clear the complete list?</string>
    <string name="preferences_category_predictions">Predictions</string>
    <string name="preferences_action_clear_predictions">Clear Predictions</string>
    <string name="preferences_action_ssl">SSL</string>
    <string name="preferences_category_auth">Authentication</string>
    <string name="preferences_category_backend">Backend</string>
    <string name="preferences_action_host">Host</string>
    <string name="preferences_hint_host" translatable="false">example.org/sholi/</string>
    <string name="preferences_summary_ssl">Enable if you want to use SSL \n (strongly recommended!)</string>
    <string name="preferences_summary_auth">Please provide your authentication token. \n (defined during backend installation)</string>
    <string name="preferences_category_qr">Quick Setup</string>
    <string name="preferences_action_scan_qr">Scan QR Code</string>
    <string name="preferences_checkbox_scan_qr_front">Use Front Camera</string>
    <string name="preferences_summary_scan_qr_front">Scan QR Code using the Front Camera</string>
    <string name="preferences_category_backend_update">Backend Update Notifications</string>
    <string name="preferences_action_check_for_updates">Check for Updates</string>
    <string name="preferences_summary_check_for_updates">Every week, check if an update is available on GitHub.</string>
    <string name="toast_predictions_cleared">Predictions cleared</string>
    <string name="preferences_action_generate_qr">Show QR Code</string>
    <string name="preferences_summary_generate_qr">Show a QR Code for others to scan</string>
    <string name="toast_qr_missing_values">Cannot show QR Code. Missing host or authkey.</string>
    <string name="GITHUB_RELEASE_URL" translatable="false">https://api.github.com/repos/GroundApps/ShoppingList_Backend/releases/latest</string>
    <string name="error_response_format">The response did not make sense:</string>
    <string name="add_custom_category">Category</string>
</resources>
