<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

<PreferenceCategory android:title="@string/preferences_category_qr" />
    <Preference android:title="@string/preferences_action_scan_qr"
        android:key="scanQR"/>
    <Preference android:title="@string/preferences_action_generate_qr"
        android:key="generateQR"
        android:summary="@string/preferences_summary_generate_qr"/>
    <PreferenceCategory android:title="@string/preferences_category_backend" />
    <EditTextPreference android:title="@string/preferences_action_host"
        android:key="host"
        android:inputType="textUri|textNoSuggestions"
        android:hint="@string/preferences_hint_host"/>
    <EditTextPreference android:title="@string/preferences_category_auth"
        android:key="authkey"
        android:summary="@string/preferences_summary_auth"
        android:inputType="textPassword|textNoSuggestions"/>
    <SwitchPreference android:title="@string/preferences_action_ssl"
        android:key="useSSL"
        android:summary="@string/preferences_summary_ssl" />
    <PreferenceCategory android:title="@string/preferences_category_predictions" />
    <Preference android:title="@string/preferences_action_clear_predictions"
        android:key="clearPredictions"/>
    <PreferenceCategory android:title="@string/preferences_category_backend_update"/>
    <SwitchPreference android:title="@string/preferences_action_check_for_updates"
        android:key="updateCheck"
        android:summary="@string/preferences_summary_check_for_updates"/>
    <Preference android:title="TEST"
        android:key="updateCheckTEST"/>

</PreferenceScreen>